packages/tree-sitter-polar/test/corpus/declarations.txt
========================================
function with named and positional args
========================================

fn multAdd
  { dom clk: Clock, rstn: Reset @clk = high, c: uint(8) @clk = 0, }
  ( a: uint(8) @clk, b: uint(8) @clk )
  -> uint(8) @clk
  {
    let mult = a * b;
    let mult = mult.reg(rstn, 0);
    let add = mult + c;
    return add;
  }

---

(source_file
  (function_definition
    name: (identifier)
    named_parameters: (named_parameter_section
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)))
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          domain: (identifier))
        default: (expression
          (identifier)))
      (named_parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))
        default: (expression
          (number))))
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))))
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number)))
      domain: (identifier))
    body: (block
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (identifier))
              right: (expression
                (identifier))))))
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (postfix_expression
              receiver: (identifier)
              (field_access
                field: (identifier))
              (argument_list
                (expression
                  (identifier))
                (expression
                  (number)))))))
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (identifier))
              right: (expression
                (identifier))))))
      (statement
        (return_statement
          value: (expression
            (identifier)))))))

========================================
var with combined initializer
========================================

fn f() {
  var count: uint(8) = count + 1;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    body: (block
      (statement
        (var_statement
          name: (identifier)
          type: (type_expression
            name: (identifier)
            (type_index
              (type_argument
              (number))))
          value: (expression
            (binary_expression
              left: (expression
                (identifier))
              right: (expression
              (number)))))))))

========================================
impl block with self parameter
========================================

impl Reg {
  fn reg{dom clk: Clock}(self @clk, rst: Reset @clk, reset_val: uint(8)) -> uint(8) @clk {
  }
}

---

(source_file
  (impl_block
    name: (identifier)
    body: (impl_body
      (function_definition
        name: (identifier)
        named_parameters: (named_parameter_section
          (named_parameter
            name: (identifier)
            type: (type_expression
              name: (identifier))))
        parameters: (parameter_section
          (parameter
            domain: (identifier))
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              domain: (identifier)))
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                (number))))))
        return_type: (return_type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number)))
          domain: (identifier))
        body: (block)))))

========================================
inline module with nested items
========================================

mod math {
  fn add(a: uint(8)) { let r = a; }
  mod inner {
    struct Packet = packet { valid: bool }
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    body: (module_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))
        body: (block
          (statement
            (let_statement
              name: (identifier)
              value: (expression
                (identifier))))))
      (module_definition
        name: (identifier)
        body: (module_body
          (struct_definition
            name: (identifier)
            constructor: (identifier)
            body: (record_type_body
              (record_field_type
                name: (identifier)
                type: (type_expression
                  name: (identifier))))))))))

========================================
file-based module declaration
========================================

mod util;

mod math {
  fn f(a: uint(8)) { let r = a; }
}

---

(source_file
  (module_definition
    name: (identifier))
  (module_definition
    name: (identifier)
    body: (module_body
      (function_definition
        name: (identifier)
        parameters: (parameter_section
          (parameter
            name: (identifier)
            type: (type_expression
              name: (identifier)
              (type_index
                (type_argument
                  (number))))))
        body: (block
          (statement
            (let_statement
              name: (identifier)
              value: (expression
                (identifier)))))))))

========================================
use declarations
========================================

use crate::a::b;
use a::{b, c::d};
use a::* ;
use a::b as c;

---

(source_file
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier)
        (identifier)
        (identifier))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier))
      group: (use_group
        (use_tree
          (use_path
            (identifier)))
        (use_tree
          (use_path
            (identifier)
            (identifier))))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier))))
  (use_declaration
    tree: (use_tree
      (use_path
        (identifier)
        (identifier))
      alias: (identifier))))

========================================
multi-segment path expression
========================================

fn f() {
  let x = crate::m::g;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    body: (block
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (path_expression
              segment: (identifier)
              segment: (identifier)
              segment: (identifier))))))))

========================================
visibility modifiers
========================================

pub fn f(x: uint(8)) { let r = x; }
pub(crate) struct P = p { v: bool }
pub use crate::a::b;

---

(source_file
  (function_definition
    visibility: (visibility_modifier)
    name: (identifier)
    parameters: (parameter_section
      (parameter
        name: (identifier)
        type: (type_expression
          name: (identifier)
          (type_index
            (type_argument
              (number))))))
    body: (block
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (identifier))))))
  (struct_definition
    visibility: (visibility_modifier)
    name: (identifier)
    constructor: (identifier)
    body: (record_type_body
      (record_field_type
        name: (identifier)
        type: (type_expression
          name: (identifier)))))
  (use_declaration
    visibility: (visibility_modifier)
    tree: (use_tree
      (use_path
        (identifier)
        (identifier)
        (identifier)))))
