packages/tree-sitter-polar/test/corpus/expressions.txt

========================================
literal bases and unary minus
========================================

fn f() -> uint(8) {
    let a = 0xF0 + 0b1010_0001;
    let b = -a;
    return 1_000;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_section)
    return_type: (return_type_expression
      name: (identifier)
      (type_index
        (type_argument
          (number))))
    body: (block
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (binary_expression
              left: (expression
                (number))
              right: (expression
                (number))))))
      (statement
        (let_statement
          name: (identifier)
          value: (expression
            (unary_expression
              operand: (expression
                (path_expression
                  segment: (identifier)))))))
      (statement
        (return_statement
          value: (expression
            (number)))))))
